--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,15 @@
   <head>
     <title>Armaan Agrawal</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   </head>
   <body>
     <div class="header">
-      <h1 id="white" class="centered-text">Armaan Agrawal</h1>
+      <h1 class="typewriter" id="white" class="centered-text">armaan_agrawal<span>&#36;</span> <span id="blink"></span></h1>
       <!-- <h1>アグラワル アルマン Armaan Agrawal अरमान अग्रवाल</h1> -->
     </div>
     <div class="hide">
-      <h1 id="japanese">アグラワル アルマン अरमान अग्रवाल</h1>
+      <h1 id="japanese">アグラワル アルマン अरमान अग्रवाल アグラワル アルマン अरमान अग्रवाल アグラワル アルマン अरमान अग्रवाल</h1>
     </div>
     <!-- <h1 id="japanese">アグラワル アルマン</h1> -->
     <div class="row">
