--- a/templates/index.html
+++ b/templates/index.html
@@ -50,8 +50,9 @@
       </div>
     </div>
     <div class="header">
-      <!-- <h1 id="white" class="centered-text">Armaan Agrawal</h1> -->
-      <!-- <h1>アグラワル アルマン Armaan Agrawal अरमान अग्रवाल</h1> -->
+      <h1><a href="https://github.com/airman416">github</a>
+        <a href="https://www.linkedin.com/in/agr1">linkedin</a>
+        <a href="mailto:me@armaanagrawal.com">mail</a></h1>
     </div>
   </body>
 </html>
