--- a/templates/index.html
+++ b/templates/index.html
@@ -1,58 +1,60 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>Armaan Agrawal</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  </head>
-  <body>
-    <div class="header">
-      <h1 class="typewriter" id="white" class="centered-text">armaan_agrawal<span>&#36;</span> <span id="blink"></span></h1>
-      <!-- <h1>アグラワル アルマン Armaan Agrawal अरमान अग्रवाल</h1> -->
+</head>
+<body>
+<div class="header">
+    <h1 class="typewriter" id="white" class="centered-text">armaan_agrawal<span>&#36;</span> <span id="blink"></span>
+    </h1>
+    <!-- <h1>アグラワル アルマン Armaan Agrawal अरमान अग्रवाल</h1> -->
+</div>
+<div class="hide">
+    <h1 id="japanese">アグラワル アルマン अरमान अग्रवाल アグラワル アルマン अरमान अग्रवाल アグラワル アルマン अरमान
+        अग्रवाल</h1>
+</div>
+<!-- <h1 id="japanese">アグラワル アルマン</h1> -->
+<div class="row">
+    <div class="column">
+        <img src="{{ url_for('static', filename='images/1.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/5.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/9.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/13.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/17.JPG') }}"/>
     </div>
-    <div class="hide">
-      <h1 id="japanese">アグラワル アルマン अरमान अग्रवाल アグラワル アルマン अरमान अग्रवाल アグラワル アルマン अरमान अग्रवाल</h1>
+    <div class="column">
+        <img src="{{ url_for('static', filename='images/2.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/6.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/10.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/14.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/18.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/22.GIF') }}"/>
+        <img src="{{ url_for('static', filename='images/26.JPG') }}"/>
     </div>
-    <!-- <h1 id="japanese">アグラワル アルマン</h1> -->
-    <div class="row">
-      <div class="column">
-        <img src="{{ url_for('static', filename='images/1.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/5.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/9.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/13.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/17.JPG') }}" />
-      </div>
-      <div class="column">
-        <img src="{{ url_for('static', filename='images/2.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/6.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/10.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/14.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/18.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/22.GIF') }}" />
-        <img src="{{ url_for('static', filename='images/26.JPG') }}" />
-      </div>
-      <div class="column">
-        <img src="{{ url_for('static', filename='images/3.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/7.GIF') }}" />
-        <img src="{{ url_for('static', filename='images/11.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/15.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/19.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/23.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/27.JPG') }}" />
-      </div>
-      <div class="column">
-        <img src="{{ url_for('static', filename='images/4.PNG') }}" />
-        <img src="{{ url_for('static', filename='images/8.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/12.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/16.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/20.JPG') }}" />
-        <img src="{{ url_for('static', filename='images/24.JPG') }}" />
-      </div>
+    <div class="column">
+        <img src="{{ url_for('static', filename='images/3.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/7.GIF') }}"/>
+        <img src="{{ url_for('static', filename='images/11.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/15.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/19.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/23.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/27.JPG') }}"/>
     </div>
-    <div class="header">
-      <h1><a href="https://github.com/airman416">github</a>
+    <div class="column">
+        <img src="{{ url_for('static', filename='images/4.PNG') }}"/>
+        <img src="{{ url_for('static', filename='images/8.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/12.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/16.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/20.JPG') }}"/>
+        <img src="{{ url_for('static', filename='images/24.JPG') }}"/>
+    </div>
+</div>
+<div class="header">
+    <h1><a href="https://github.com/airman416">github</a>
         <a href="https://www.linkedin.com/in/agr1">linkedin</a>
         <a href="mailto:me@armaanagrawal.com">mail</a></h1>
-    </div>
-  </body>
+</div>
+</body>
 </html>
