--- a/templates/me.html
+++ b/templates/me.html
@@ -7,58 +7,44 @@
 </head>
 <body>
 <div class="footer">
-    <a href="{{ url_for('index') }}">
-        <h1 class="typewriter" id="white" class="centered-text">armaan_agrawal<span>&#36;</span> <span id="blink"></span></h1>
-    </a>
+    <a href="{{ url_for('me') }}">
+    <h1 class="typewriter" id="white" class="centered-text">armaan_agrawal<span>&#36;</span> <span id="blink"></span>
+    </h1></a>
 </div>
-<div class="hide">
-    <h1 id="japanese">アグラワル アルマン अरमान अग्रवाल アグラワル アルマン अरमान अग्रवाल アグラワル アルマン अरमान
-        अग्रवाल</h1>
+<div class="about-me">
+    <div class="section">
+        <div class="image-section">
+            <a href="{{ url_for('me') }}" class="image-caption">
+                <img src="{{ url_for('static', filename='images/2.JPG') }}"/>
+                <div class="caption">Click here for a super cool webpage.</div>
+            </a>
+        </div>
+        <div class="text text-right">
+            <h2>README.md</h2>
+            <ul>
+                <li>20 y.o. male from Japan @ Northeastern University 2026, BS CS who is a creative with a technical background.</li>
+            </ul>
+        </div>
+    </div>
 </div>
-<!-- <h1 id="japanese">アグラワル アルマン</h1> -->
-<div class="row">
-    <div class="column">
-        <img src="{{ url_for('static', filename='images/1.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/5.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/9.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/13.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/17.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/29.JPG') }}"/>
-    </div>
-    <div class="column">
-        <img src="{{ url_for('static', filename='images/2.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/6.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/10.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/14.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/18.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/22.GIF') }}"/>
-        <img src="{{ url_for('static', filename='images/26.JPG') }}"/>
-    </div>
-    <div class="column">
-        <img src="{{ url_for('static', filename='images/3.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/7.GIF') }}"/>
-        <img src="{{ url_for('static', filename='images/11.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/15.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/19.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/23.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/27.JPG') }}"/>
-    </div>
-    <div class="column">
-        <img src="{{ url_for('static', filename='images/4.PNG') }}"/>
-        <img src="{{ url_for('static', filename='images/8.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/12.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/16.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/20.JPG') }}"/>
-        <img src="{{ url_for('static', filename='images/24.JPG') }}"/>
+<div class="my-work">
+    <div class="section">
+        <div class="text text-left">
+            <h2>My Work</h2>
+            <ul>
+                <li><a href="https://www.swipefeed.live/" target="_blank">SwipeFeed.live</a> - Tinder swipe on your news</li>
+                <li><a href="https://boardnu.fly.dev/" target="_blank">BoardNU.Fly.Dev</a> - Makes physical bulletin boards obsolete</li>
+                <li><a href="https://neu.acm.org/" target="_blank">NUACM</a> - Founder of Northeastern's ACM Chapter</li>
+                <li><a href="https://armaanagrawal.substack.com/" target="_blank">Substack</a> - Check out my writing</li>
+            </ul>
+        </div>
         <img src="{{ url_for('static', filename='images/28.JPG') }}"/>
     </div>
 </div>
 <div class="footer">
-    <h1>
-        <a href="https://github.com/airman416">github</a>
+    <h1><a href="https://github.com/airman416">github</a>
         <a href="https://www.linkedin.com/in/agr1">linkedin</a>
-        <a href="mailto:me@armaanagrawal.com">mail</a>
-    </h1>
+        <a href="mailto:itsarmaan.tokyo@gmail.com">mail</a></h1>
 </div>
 </body>
 </html>
